<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".activity.CouponsActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="@dimen/_1sdp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/_10sdp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="@dimen/_1sdp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/_10sdp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="@dimen/_1sdp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/_10sdp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="@dimen/_1sdp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/_10sdp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_cl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_rounded_rectangle_solid_white"
        android:elevation="@dimen/_8sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingBottom="@dimen/_14sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_apply_coupon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/apply_coupon"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_your_cart_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_1sdp"
            android:text="@string/your_cart_200"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_apply_coupon" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/full_rounded_rectangle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_your_cart_amount">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_enter_coupon_code"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@null"
                android:cursorVisible="true"
                android:hint="@string/enter_coupon_code_hint"
                android:imeOptions="actionDone"
                android:inputType="textCapCharacters"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/_5sdp"
                android:singleLine="true"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textCursorDrawable="@drawable/cursor_drawable"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_apply"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_apply"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_5sdp"
                android:enabled="false"
                android:gravity="center"
                android:paddingHorizontal="@dimen/_8sdp"
                android:text="@string/apply"
                android:textAllCaps="true"
                android:textColor="@color/apply_tv_color"
                android:textSize="@dimen/_13ssp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tiet_enter_coupon_code"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_more_offers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/more_offers"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        android:textStyle="normal"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/header_cl" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_coupons"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_8sdp"
        android:orientation="vertical"
        android:scrollbars="none"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/tv_more_offers"
        tools:listitem="@layout/layout_coupons_item" />

    <nl.dionsegijn.konfetti.xml.KonfettiView
        android:id="@+id/konfettiView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>